RESOLVED FIXED70440
[Chromium] Export missing symbols from Web*Layer
https://bugs.webkit.org/show_bug.cgi?id=70440
Summary [Chromium] Export missing symbols from Web*Layer
Antoine Labour
Reported 2011-10-19 14:20:30 PDT
Export missing symbols from Web*Layer
Attachments
Patch (3.87 KB, patch)
2011-10-19 14:20 PDT, Antoine Labour
no flags
Patch (3.96 KB, patch)
2011-10-20 13:39 PDT, Antoine Labour
no flags
Antoine Labour
Comment 1 2011-10-19 14:20:53 PDT
WebKit Review Bot
Comment 2 2011-10-19 15:31:02 PDT
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Darin Fisher (:fishd, Google)
Comment 3 2011-10-19 21:03:58 PDT
Comment on attachment 111673 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=111673&action=review > Source/WebKit/chromium/public/WebContentLayer.h:38 > +class WEBKIT_EXPORT WebContentLayer : public WebLayer { we don't normally export entire classes. see other header files. we just export the non-inline methods (ignore pure virtual methods of course).
Antoine Labour
Comment 4 2011-10-19 22:17:59 PDT
(In reply to comment #3) > (From update of attachment 111673 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=111673&action=review > > > Source/WebKit/chromium/public/WebContentLayer.h:38 > > +class WEBKIT_EXPORT WebContentLayer : public WebLayer { > > we don't normally export entire classes. see other header files. we just export the non-inline methods (ignore pure virtual methods of course). That was necessary, otherwise I was getting undefined symbols for the vtable - it's defined with the first virtual method definition (in this case the destructor, inside of the .so), but is needed in the constructor (inlined in the calling code). If we're adamant on that, we could try inlining the virtual destructor, or un-inlining the constructors and moving them into the .cpp. I'll see if either one works.
Darin Fisher (:fishd, Google)
Comment 5 2011-10-19 23:34:32 PDT
(In reply to comment #4) ... > That was necessary, otherwise I was getting undefined symbols for the vtable - it's defined with the first virtual method definition (in this case the destructor, inside of the .so), but is needed in the constructor (inlined in the calling code). > If we're adamant on that, we could try inlining the virtual destructor, or un-inlining the constructors and moving them into the .cpp. I'll see if either one works. We haven't had to export classes before. Something must be unconventional here that can be avoided.
Darin Fisher (:fishd, Google)
Comment 6 2011-10-19 23:36:08 PDT
(In reply to comment #5) > (In reply to comment #4) > ... > > That was necessary, otherwise I was getting undefined symbols for the vtable - it's defined with the first virtual method definition (in this case the destructor, inside of the .so), but is needed in the constructor (inlined in the calling code). > > If we're adamant on that, we could try inlining the virtual destructor, or un-inlining the constructors and moving them into the .cpp. I'll see if either one works. > > We haven't had to export classes before. Something must be unconventional here that can be avoided. perhaps you should inline the WebLayer destructor. that would probably do the trick. we normally do not export constructors and destructors.
Antoine Labour
Comment 7 2011-10-20 13:39:15 PDT
Antoine Labour
Comment 8 2011-10-20 13:40:07 PDT
New patch does that.
WebKit Review Bot
Comment 9 2011-10-20 16:19:01 PDT
Comment on attachment 111839 [details] Patch Clearing flags on attachment: 111839 Committed r98035: <http://trac.webkit.org/changeset/98035>
WebKit Review Bot
Comment 10 2011-10-20 16:19:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.