Export missing symbols from Web*Layer https://bugs.webkit.org/show_bug.cgi?id=70440

Patch by Antoine Labour <piman@chromium.org> on 2011-10-20
Reviewed by Darin Fisher.

* public/WebContentLayer.h:
* public/WebExternalTextureLayer.h:
* public/WebLayer.h:
* public/WebLayerTreeView.h:

Canonical link: https://commits.webkit.org/86746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98035 268f45cc-cd09-0410-ab3c-d52691b4dbfc